syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "FreezeBalanceContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

import "core/contract/common.proto";

message FreezeBalanceContract {
  bytes owner_address = 1;
  int64 frozen_balance = 2;
  int64 frozen_duration = 3;

  ResourceCode resource = 10;
  bytes receiver_address = 15;
}


message UnfreezeBalanceContract {
  bytes owner_address = 1;

  ResourceCode resource = 10;
  bytes receiver_address = 15;
}

message WithdrawBalanceContract {
  bytes owner_address = 1;
}

message TransferContract {
  bytes owner_address = 1;
  bytes to_address = 2;
  int64 amount = 3;
}

message CrossContract {
  bytes owner_address = 1;
  bytes owner_chainId = 2;
  bytes to_address = 3;
  bytes to_chainId = 4;
  bytes data = 5;
  CrossDataType type = 6;
  enum CrossDataType {
    TOKEN = 0;
  }
}

message CrossToken {
  int64 amount = 1;
  bytes token_id = 2;
  bytes token_name = 3;
  int32 precision = 4;
  bytes chain_id = 5;
}

message RegisterCrossContract {
  bytes chain_id = 1;
  bytes sr_list = 2;
  int64 begin_sync_height = 3;
  int64 maintenance_time_interval = 4;
  bytes parent_block_hash = 5;
}